--- a/training_vis.ipynb
+++ b/training_vis.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import data_ops\n",
+    "from src import data_ops\n",
     "import math\n",
     "\n",
     "loss_dir = 'losses'"
